--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -3,11 +3,15 @@
     width: 100%;
     height: 100px;
     justify-content: space-between;
+    background-color: blue;
+    
+
 }
 h2{
     color: white;
     align-items: center; 
     width: 33%;   
+    height: 100px;
     
 }
 span{
