--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,44 +1,63 @@
-.menu {
+.NavBar {
     display: flex;
-    width: 100%;
-    height: 100px;
-    justify-content: space-between;
-    background-color: blue;
-    
-
-}
-h2{
-    color: white;
-    align-items: center; 
-    width: 33%;   
-    height: 100px;
-    
-}
-span{
-    font-weight: bold;
-    font-size: 30px;
-} 
-.botones{
-    display: flex;
-    gap: 40px;   
+    background: transparent;
+    justify-content: space-around;
     align-items: center;
-    width: 33%;
+    height: 60px;
+    background: lightskyblue;
+  }
+  
+  .Categories {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  
+  .Option {   
+    font-family:Arial, Helvetica, sans-serif;
+    text-decoration: none;
+    border-radius: 25;
+    margin: 0 50px;
+    width: auto;
+    padding: 12px;
+    font-size: 14px;
+    background: rgb(54, 31, 185);
+    border-radius: 8px;
+    flex: none;
+    display: flex;
+    order: 1;
+    align-self: center;
+    flex-grow: 0;
     justify-content: center;
-}
-button {    
-    border-radius: 5px;
-    width: 100px;
-    height: 50px;
-    font-size: 16px;
-    background: #0686c2;
+    align-items: center;
     text-decoration: none;
-    border-style: none;
-    text-align: center;
-}
-
-a {
     color: white;
+    border: none;
+    border-style: none;
+    cursor: pointer;
+    outline: inherit;
+  }
+  
+  .ActiveOption {    
     text-decoration: none;
-    
-}
-
+    border-radius: 25;
+    margin: 0 50px;
+    width: auto;
+    padding: 12px;
+    font-size: 14px;
+    background: black;
+    border-radius: 8px;
+    flex: none;
+    display: flex;
+    order: 1;
+    align-self: center;
+    flex-grow: 0;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: #FFFFFF;
+    border: none;
+    border-style: none;
+    cursor: pointer;
+    outline: inherit;
+  }
