--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -5,7 +5,7 @@
     width: auto;
     padding: 12px;
     font-size: 8px;
-    background: #306bf5;
+    background: rgb(54, 31, 185);
     border-radius: 8px;
     display: flex;
     align-self: center;
@@ -18,17 +18,18 @@
     border-style: none;
     cursor: pointer;
     outline: inherit;
-    font-size: larger;
+    font-size: 15px;
+    
 }
 
-.Button2 {
-    text-decoration: none;
+/* .Button2 {
+        text-decoration: none;
         border-radius: 25;
         margin: 0 5px;
         width: auto;
         padding: 12px;
         font-size: 8px;
-        background: #306bf5;
+        background: rgb(54, 31, 185);
         border-radius: 8px;
         align-self: center;
         flex-grow: 0;
@@ -42,7 +43,7 @@
         outline: inherit;
         font-size: larger;
     
-}
+} */
 
   table {
       border-collapse: collapse;
@@ -50,14 +51,14 @@
   }
 
   /* Espacio de relleno en celdas y cabeceras */
-  td,
+  /* td,
   th {
       padding: 10px;
-  }
+  } */
 
   /* Modificación de estilos en cabeceras */
   th {
-      background: #000;
+    background: rgb(54, 31, 185);
       color: #fff;
       text-transform: uppercase;
   }
@@ -89,8 +90,9 @@
     padding: 1%;
     width: 75%;
     border-radius: 10px;
+    background: lightskyblue;
     box-shadow: 8px 8px 20px #306bf5;
-    background-color: rgb(149, 191, 250);
+    /* background-color: rgb(149, 191, 250); */
 }
 
 .cart-container>* {
