--- a/src/components/Checkout/Checkout.css
+++ b/src/components/Checkout/Checkout.css
@@ -2,26 +2,28 @@
     display: flex;
     align-items: center;
     justify-content: center;
-
+    background: rgb(54, 31, 185) !important;
     width: 100%;    
     
 }
 .form-horizontal{
-    width: 80%;
+    width: 100%;
     text-align: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
-
+    align-items: center;  
+    padding-top: 30px;
     
-    
-    /* justify-content: center;
-    align-items: center; */
-
+}
+.col-md-6{
+    text-align: left;
 }
 
-
+h6{
+    text-align: right;
+    padding: 20px;
+}
 
 
 /* .form-label {
@@ -30,6 +32,14 @@
 .form-check-label{
     color: #DFF6FF;
 } */
-.boton{
-    padding-top: 20px;
+/* .boton{
+     padding-top: 20px;
+}*/
+button{
+    padding: 15px !important;
+    font-size: 12px;
+}
+
+.btn{
+    background: rgb(54, 31, 185) !important;
 }
