--- a/src/components/CartContainer/CartContainer.css
+++ b/src/components/CartContainer/CartContainer.css
@@ -2,9 +2,7 @@
     text-decoration: none;
     border-radius: 25;
     margin: 0 5px;
-    width: auto;
-    /* padding: 10px; */
-    /* font-size: 5px; */
+    width: auto;   
     background: #306bf5;
     border-radius: 8px;
     display: flex;
@@ -20,26 +18,22 @@
     outline: inherit;
     font-size: larger;
 }
+table {
+    border-collapse: collapse;
+    border: 1px solid #ccc;
+}
+td, th {
+    padding: 10px;
+}
 
-  table {
-      border-collapse: collapse;
-      border: 1px solid #ccc;
-  }
-
-  td,
-  th {
-      padding: 10px;
-  }
-
-  th {
-      background: #000;
-      color: #fff;
-      text-transform: uppercase;
-  }
-
-  td {
-      text-align: center;
-      border-bottom: 2px solid #111;
-      color: #333;
-      font-size: 18px;
-  }
+th {
+    background: #000;
+    color: #fff;
+    text-transform: uppercase;
+}
+td {
+    text-align: center;
+    border-bottom: 2px solid #111;
+    color: #333;
+    font-size: 18px;
+}
